--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
   <title>Snake Game</title>
 </head>
 <body>
-  
+  <main>
+    <section>
+      <div class="infos">
+        <div class="info">
+          <h3>
+            High-Score: <span id="high-score">0</span>
+          </h3>
+        </div>
+        <div class="info">
+          <h3>
+            Score: <span id="score">0</span>
+          </h3>
+        </div>
+        <div class="info">
+          <h3>
+            Time: <span id="high-score">00-00</span>
+          </h3>
+        </div>
+      </div>
+      <div class=""></div>
+    </section>
+  </main>
 
   <script src="script.js"></script>
 </body>
